--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "dependencies": {
     "@lucide/astro": "^0.525.0",
     "astro": "^5.10.1",
-    "lucide-react": "^0.525.0"
+    "lucide-react": "^0.525.0",
+    "tailwind-merge": "^3.3.1"
+  },
+  "devDependencies": {
+    "@iconify-json/tabler": "^1.2.19",
+    "astro-icon": "^1.1.5"
   }
 }
