--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@lucide/astro": "^0.525.0",
     "astro": "^5.10.1",
     "lucide-react": "^0.525.0",
+    "p5": "^2.0.3",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@iconify-json/tabler": "^1.2.19",
+    "@types/p5": "^1.7.6",
     "astro-icon": "^1.1.5"
   }
 }
